--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,8 +35,103 @@ button:focus {
     box-shadow: unset;
 }
 
-.registration_form {
-    padding: 30px;
-    margin-top: 30px;
-    background: #f5f5f5;
+
+
+/* login page css */
+.login_page_header {
+    padding: 35px 0;
 }
+.login_page {
+    background-size: cover;
+    background: url(../../assets/img/login/slider_bg.jpg);
+    background-position: center top;
+}
+.logo_img {
+    width: 100%;
+}
+.login_page_navbar{
+    float: right;
+}
+.login_page_navbar.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 26px;
+    letter-spacing: 0.8px;
+    padding-right: 30px;
+    padding-top: 13px;
+}
+.login_page_navbar.navbar-expand-lg .navbar-nav a.nav-link.scholarship_btn {
+    color: #f25449;
+    background: #fff;
+    padding: 14px 25px 11px;
+    border-radius: 6px;
+    font-weight: 500;
+}
+.login_form_section {
+    padding-top: 120px;
+}
+.login_slider_inner_txt {
+    color: #fff;
+}
+.slider_title {
+    text-transform: uppercase;
+    font-size: 53px;
+    letter-spacing: 1.5px;
+    font-weight: 700;
+    line-height: 60px;
+}
+.slider_btm_txt {
+    font-size: 19px;
+    line-height: 28px;
+    font-weight: 400;
+    padding-top: 5px;
+}
+.slider_text {
+    padding-right: 8%;
+}
+.login_form {
+    padding: 30px 40px;
+    background: #ffffff;
+    text-align: center;
+    border-radius: 8px;
+}
+.form_title {
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    font-size: 34px;
+    line-height: 40px;
+}
+.form_subtitle{
+    font-size: 18px;
+}
+.login_form .form-control {
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #E2E2E2;
+    border-radius: 8px;
+    background-color: #F1F1F1;
+    height: 55px;
+    padding: 20px;
+    color: #bfbfbf;
+}
+
+.login_form .form-control::placeholder {
+    color: #bfbfbf;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.form-btn {
+    width: 100%;
+    padding: 11px;
+    font-size: 20px;
+    border-radius: 8px;
+    background: #f25449;
+}
+.login_btn_img {
+    width: 19px;
+    margin-left: 5px;
+    margin-top: -3px;
+}
+/* login page css end*/
