--- a/public/assets/css/media.css
+++ b/public/assets/css/media.css
@@ -1,4 +1,5 @@
 @media (min-width: 1200px) {
+
     .container,
     .container-lg,
     .container-md,
@@ -6,4 +7,28 @@
     .container-xl {
         max-width: 1200px;
     }
+}
+
+@media (max-width:1199px) {
+    .slider_text {
+        padding-right: 4%;
+    }
+}
+
+@media (max-width:991px) and (min-width:768px) {
+    .login_form {
+        padding: 15px 20px 5px;
+    }
+}
+
+@media (max-width:991px) {
+    .slider_text {
+        padding-right: 15px;
+    }
+}
+
+@media (max-width:767px) {
+    .login_form_section {
+    padding: 60px 0 100px;
+}
 }
