--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,9 @@ ul li {
 a:hover {
     text-decoration: none;
 }
+.themecolor{
+    color: #a223f1; 
+}
 .error {
     color: #dc3545;
     font-size: 15px;
@@ -36,23 +39,28 @@ button:focus {
 }
 
 
-
+/* section.page_header {
+    background: #ccc;
+} */
 /* login page css */
-.login_page_header {
+.page_header {
     padding: 35px 0;
 }
-.login_page {
-    background-size: cover;
+.page_login, .page_register  {
     background: url(../../assets/img/login/slider_bg.jpg);
     background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .logo_img {
     width: 100%;
 }
-.login_page_navbar{
+.navbar {
+    display: block;
+    text-align: right;
     float: right;
 }
-.login_page_navbar.navbar-light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {
     color: #fff;
     text-transform: uppercase;
     font-size: 20px;
@@ -61,15 +69,23 @@ button:focus {
     padding-right: 30px;
     padding-top: 13px;
 }
-.login_page_navbar.navbar-expand-lg .navbar-nav a.nav-link.scholarship_btn {
-    color: #f25449;
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #fff;
+}
+.navbar-nav .nav-item.active .nav-link span{
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+.navbar-expand-lg .navbar-nav a.nav-link.scholarship_btn {
+    color: #a223f1;
     background: #fff;
     padding: 14px 25px 11px;
     border-radius: 6px;
     font-weight: 500;
 }
+
 .login_form_section {
-    padding-top: 120px;
+    padding: 120px 0;
 }
 .login_slider_inner_txt {
     color: #fff;
@@ -80,6 +96,7 @@ button:focus {
     letter-spacing: 1.5px;
     font-weight: 700;
     line-height: 60px;
+    word-break: break-word;
 }
 .slider_btm_txt {
     font-size: 19px;
@@ -88,10 +105,10 @@ button:focus {
     padding-top: 5px;
 }
 .slider_text {
-    padding-right: 8%;
+    padding-right: 6%;
 }
 .login_form {
-    padding: 30px 40px;
+    padding: 25px 40px 15px;
     background: #ffffff;
     text-align: center;
     border-radius: 8px;
@@ -104,7 +121,10 @@ button:focus {
     line-height: 40px;
 }
 .form_subtitle{
-    font-size: 18px;
+    font-size: 19px;
+}
+.login_form .form-group {
+    margin-bottom: 12px;
 }
 .login_form .form-control {
     border-style: solid;
@@ -115,6 +135,7 @@ button:focus {
     height: 55px;
     padding: 20px;
     color: #bfbfbf;
+    
 }
 
 .login_form .form-control::placeholder {
@@ -127,11 +148,106 @@ button:focus {
     padding: 11px;
     font-size: 20px;
     border-radius: 8px;
-    background: #f25449;
+    background: #a223f1;
+    color: #fff;
 }
+.form-btn:hover {
+    color: #fff;
+    background: #b237fe;
+}
+
 .login_btn_img {
     width: 19px;
     margin-left: 5px;
     margin-top: -3px;
 }
 /* login page css end*/
+
+/* checkbox css */
+/* The checkbox_label */
+.checkbox_label a{
+    text-decoration: underline;
+}
+.checkbox_label {
+    display: block;
+    position: relative;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-size: 15px;
+    font-weight: 500;
+    color: #cbcbcb;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .checkbox_label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 4px;
+    left: 0;
+    height: 18px;
+    width: 18px;
+    background-color: #fff;
+    border: 1.5px solid #edcfff;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .checkbox_label:hover input ~ .checkmark {
+    background-color: #fff;
+    border: 1.5px solid #edcfff;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .checkbox_label input:checked ~ .checkmark {
+    background-color: #a223f1; 
+    border: 1.5px solid #a223f1;
+}
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .checkbox_label input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .checkbox_label .checkmark:after {
+    left: 5px;
+    top: -0.5px;
+    width: 6px;
+    height: 13px;
+    border: solid #ffffff;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+/* checkbox css end */
+
+/* registration page css */
+.registration_form_section {
+    padding: 80px 0;
+}
+.registration_form_section .slider_text {
+    padding-top: 5%;
+    padding-right: 6%;
+}
+/* registration page css end*/
