--- a/public/assets/css/media.css
+++ b/public/assets/css/media.css
@@ -31,6 +31,15 @@
     .login_form_section {
         padding: 60px 0 100px;
     }
+    .registration_form_section {
+        padding: 30px 0 100px;
+    }
+    .slider_btm_txt {
+        padding-bottom: 30px;
+    }
+}
+
+@media (max-width:575px) {
     .navbar-light .navbar-toggler {
         position: absolute;
         right: 0;
